index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
	flex-direction: column;
    justify-content: start;
    align-items: center;
    min-height: 100vh;
    background-color: black;
    color: white;
	gap: 2em;
}

h1 {
	margin-top: 2em;
}

h2 {
	margin-bottom: 2em;
}

.container {
    max-width: 1200px;
    width: 95%;
	margin-top: 2em;
}

.slider-wrapper {
    position: relative;
}

.slider-wrapper .slide-button {
    position: absolute;
    top: 50%;
    height: 50px;
    width: 50px;
    color: black;
    border: none;
    outline: none;
    background-color: wheat;
    font-size: 3.2rem;
    cursor: pointer;
    border-radius: 50%;
    transform: translateY(-50%);
	z-index: 1;
}

.slider-wrapper .slide-button:hover {
    background-color: gold;
}

.slider-wrapper .slide-button#prev-slide {
    left: -20px;
    display: none;
}

.slider-wrapper .slide-button#next-slide {
    right: -20px;
}

.slider-wrapper .image-list {
    display: grid;
    gap: 18px;
    font-size: 22px;
    font-weight: bold;

    margin-bottom: 30px;
    overflow-x: auto;
    scrollbar-width: none;
    grid-template-columns: repeat(10, 1fr);

}

.img-text-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
	min-width: 220px;
	overflow: hidden;
}


.slider-wrapper .image-list::-webkit-scrollbar {
    display: none;
}

.slider-wrapper .image-list .image-item {
    width: 200px;
    height: 220px;
    border-radius: 10px;

    object-fit: cover;
}

.img-text-wrapper p {
	margin-top: 2em;
	font-size: 1.2rem;
	letter-spacing: 1px;
	text-align: center;
}

/* Hover Effects */ 

.img-text-wrapper p {
    position: absolute;
    bottom: -30%;
    left: 0;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    transition: bottom 0.4s ease-in-out;
}

.img-text-wrapper:hover p {
    bottom: 0;
}


.slider-wrapper .image-list img:hover {
    transform: scale(0.9);
    transition: 0.5s ease-in-out;
    cursor: pointer;
} 


.container .slider-scrollbar {
    height: 24px;
    width: 100%;

    display: flex;
    align-items: center;
}

.slider-scrollbar .scrollbar-track {
    height: 2px;
    width: 100%;
    background-color: white;
    position: relative;
    border-radius: 3px;
}


.slider-scrollbar:hover .scrollbar-track {
    height: 4px;
}

.slider-scrollbar .scrollbar-thumb {
    position: absolute;
    height: 100%;
    width: 50%;
    background-color: coral;
    border-radius: inherit;
    cursor: grab;
}

.slider-scrollbar .scrollbar-thumb:active {
    cursor: grabbing;
    height: 8px;
    top: -2px;
}

.slider-scrollbar .scrollbar-thumb::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: -10px;
    bottom: -10px;
}

/* Styles for mobile and tablets */

@media (max-width: 1023px) {
    .slider-wrapper .slide-button {
        display: none !important;
    }

    .slider-wrapper .image-list {
        gap: 20px;
        margin-bottom: 15px;
    }

    .slider-wrapper .image-list .image-item {
        width: 250px;
        height: 350px;
    }

    .slider-scrollbar .scrollbar-thumb {
        width: 20%;
    }
}























  

